--- a/index.html
+++ b/index.html
@@ -56,8 +56,18 @@
         </section>
     </main>
     <main>
-        <h1 class="Unleash">Unleash server-side tracking's <br>
-            potential with us!</h1>
+        <section class="display Unleash-h">
+            <div>
+                <h1 class="Unleash">Unleash server-side tracking's <br>
+                    potential with us!</h1>
+            </div>
+            <div>
+                <p class="Unleash-p">Maximize Your Campaign’s Potential and Boost <br> Your ROI with Our Advanced
+                    Tracking
+                    Tools and <br>
+                    Techniques.</p>
+            </div>
+        </section>
 
         <section class="display hasan">
             <div class="Marketing">
