--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
 
             </div>
             <button class=" button">Get Started</button>
+
         </nav>
 
     </header>
@@ -38,7 +39,7 @@
             <button class="button-1">Explore Our Services</button>
         </div>
         <div class="banner-img display">
-            <img src="./Banner.png" alt="">
+            <img src="./img/Banner.png" alt="">
         </div>
 
         <section class="display google-maine">
