--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <header>
+    <header class="navebar-stle">
         <nav class="navebar display">
             <img class="nav-img-1" src="./img/nave1.png" alt="">
 
@@ -24,13 +24,10 @@
 
             </div>
             <button class=" button">Get Started</button>
+            
 
         </nav>
-
-    </header>
-    <main>
-        <!-- Banner style -->
-        <div class="banner">
+         <div class="banner">
             <h1 class="banner-heding">Built to Scale. <br> Optimized for Growth.</h1>
             <p class="banner-p">Attribution Booster helps you scale smarter with full-stack web development, precision
                 <br>
@@ -42,6 +39,11 @@
             <img src="./img/Banner.png" alt="">
         </div>
 
+
+    </header>
+    <main>
+        <!-- Banner style -->
+       
         <section class="display google-maine">
             <div class="google-m">
                 <div class="google-n">
