navebar add and work inporges

--- a/index.html
+++ b/index.html
@@ -205,6 +205,7 @@
                     Example:
                 </p>
             </header>
+
             <div class="display Slack-m">
                 <div class="Slack-c">
                     <h2 class="Slack">Slack</h2>
@@ -222,10 +223,99 @@
                     <h2 class="Slack">Slack</h2>
 
                 </div>
-                
+                <div class="Slack-c">
+                    <h2 class="Slack">Slack</h2>
+
+                </div>
+                <div class="Slack-c">
+                    <h2 class="Slack">Slack</h2>
+
+                </div>
+
+            </div>
+            <div class="display Slack-m">
+                <div class="Slack-c">
+                    <h2 class="Slack">Slack</h2>
+
+                </div>
+                <div class="Slack-c">
+                    <h2 class="Slack">Slack</h2>
+
+                </div>
+                <div class="Slack-c">
+                    <h2 class="Slack">Slack</h2>
+
+                </div>
+                <div class="Slack-c">
+                    <h2 class="Slack">Slack</h2>
+
+                </div>
+                <div class="Slack-c">
+                    <h2 class="Slack">Slack</h2>
+
+                </div>
+                <div class="Slack-c">
+                    <h2 class="Slack">Slack</h2>
+
+                </div>
+
+            </div>
+            <div class="display Slack-m">
+                <div class="Slack-c">
+                    <h2 class="Slack">Slack</h2>
+
+                </div>
+                <div class="Slack-c">
+                    <h2 class="Slack">Slack</h2>
+
+                </div>
+                <div class="Slack-c">
+                    <h2 class="Slack">Slack</h2>
+
+                </div>
+                <div class="Slack-c">
+                    <h2 class="Slack">Slack</h2>
+
+                </div>
+                <div class="Slack-c">
+                    <h2 class="Slack">Slack</h2>
+
+                </div>
+                <div class="Slack-c">
+                    <h2 class="Slack">Slack</h2>
+
+                </div>
+
             </div>
 
+
         </main>
+        <header>
+            <!-- Recent Projects -->
+            <section class="display Recent-m">
+                <div class="Recent-h">
+                    <h1>Recent Projects</h1>
+                </div>
+                <div class="Recent-p">
+                    <p>Discover our most successful projects showcasing every service we offer. Use the <br> filter
+                        buttons above
+                        to select a specific service.</p>
+                </div>
+            </section>
+
+        </header>
+        <section>
+            <ul class="See-m">
+                <li class="display">
+                    <a class="See-1" href="">See All</a>
+                    <a class="See" href="">Design</a>
+                    <a class="See" href="">Development</a>
+                    <a class="See" href="">Ui UX Design</a>
+                    <a class="See" href="">Marketing</a>
+                    <a class="See" href="">SEO</a>
+                </li>
+            </ul>
+        </section>
     </main>
     <footer>
 
