banner img add and text add worck compled

--- a/index.html
+++ b/index.html
@@ -316,6 +316,26 @@
                 </li>
             </ul>
         </section>
+
+        <section>
+            <header class="Travel-h display" >
+                <div class="Travel-b">
+                    <img class="Travel" src="./img/img14.png" alt="">
+                    <h2 class="Travel-h2">Travel Website</h2>
+                    <p class="Travel-p">Creative Design</p>
+                </div>
+                <div class="Travel-b">
+                    <img class="Travel" src="./img/img14.png" alt="">
+                    <h2 class="Travel-h2">Travel Website</h2>
+                    <p class="Travel-p">Creative Design</p>
+                </div>
+                <div class="Travel-b">
+                    <img class="Travel" src="./img/img14.png" alt="">
+                    <h2 class="Travel-h2">Travel Website</h2>
+                    <p class="Travel-p">Creative Design</p>
+                </div>
+            </header>
+        </section>
     </main>
     <footer>
 
