--- a/index.html
+++ b/index.html
@@ -318,19 +318,36 @@
         </section>
 
         <section>
-            <header class="Travel-h display" >
+            <header class="Travel-h display">
                 <div class="Travel-b">
                     <img class="Travel" src="./img/img14.png" alt="">
                     <h2 class="Travel-h2">Travel Website</h2>
                     <p class="Travel-p">Creative Design</p>
                 </div>
                 <div class="Travel-b">
-                    <img class="Travel" src="./img/img14.png" alt="">
+                    <img class="Travel" src="./img/img15.png" alt="">
                     <h2 class="Travel-h2">Travel Website</h2>
                     <p class="Travel-p">Creative Design</p>
                 </div>
                 <div class="Travel-b">
-                    <img class="Travel" src="./img/img14.png" alt="">
+                    <img class="Travel" src="./img/img16.png" alt="">
+                    <h2 class="Travel-h2">Travel Website</h2>
+                    <p class="Travel-p">Creative Design</p>
+                </div>
+            </header>
+            <header class="Travel-h display">
+                <div class="Travel-b">
+                    <img class="Travel" src="./img/img17.png" alt="">
+                    <h2 class="Travel-h2">Travel Website</h2>
+                    <p class="Travel-p">Creative Design</p>
+                </div>
+                <div class="Travel-b">
+                    <img class="Travel" src="./img/img18.png" alt="">
+                    <h2 class="Travel-h2">Travel Website</h2>
+                    <p class="Travel-p">Creative Design</p>
+                </div>
+                <div class="Travel-b">
+                    <img class="Travel" src="./img/img19.png" alt="">
                     <h2 class="Travel-h2">Travel Website</h2>
                     <p class="Travel-p">Creative Design</p>
                 </div>
