--- a/index.html
+++ b/index.html
@@ -353,6 +353,43 @@
                 </div>
             </header>
         </section>
+        <main  class="Award-m">
+            <header class="display Real-m">
+                <div>
+                    <h1 class="Real">Real Results. Global Reach. Proven Trust</h1>
+                </div>
+                <div>
+                    <p class="Real-1">Attribution Booster delivers measurable growth through full-stack <br>
+                        development,
+                        performance marketing,
+                        and analytics-driven strategies.
+                        With a global <br> footprint and a client-first mindset</p>
+                </div>
+            </header>
+
+            <section class="display Award-s ">
+                <div class="img-20">
+
+                    <h1 class="banner-t-1">1,500+</h1>
+                    <p class="banner-p-1">Progct Complete</p>
+
+                </div>
+
+                <div class="industry-h">
+                    <h1 class="industry">25+</h1>
+                    <p class="industry-p">Years Of Experience</p>
+                    <img class="industry-img" src="./img/img21.png" alt="">
+                    <p class="industry-p2">Our deep industry knowledge drives innovative and reliable <br>solutions.
+                        Trust our
+                        proven track record to deliver results that <br> exceed expectations.</p>
+                </div>
+            </section>
+            <img class="img-22" src="./img/img22.png" alt="">
+            <div class="Award-h">
+                <h1 class="Award"> 24+  </h1>
+                <p class="Award-1">Award Wining</p>
+            </div>
+        </main>
     </main>
     <footer>
 
