bacgorunt img add

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <header class="navebar-stle">
+    <header class="navebar-stle ">
         <nav class="navebar display">
             <img class="nav-img-1" src="./img/nave1.png" alt="">
 
@@ -36,6 +36,7 @@
             <button class="button-1">Explore Our Services</button>
         </div>
         <div class="banner-img display">
+
             <img src="./img/Banner.png" alt="">
         </div>
 
@@ -175,7 +176,8 @@
             </div>
 
         </section>
-        <header>
+<!-- Enjoy 10% Off When You Choose Our Annual Package -->
+        <header class="Enjoy-h1" >
 
             <div class="Enjoy-h display">
                 <div class="Enjoy-10">
@@ -195,7 +197,7 @@
                 </div>
             </div>
         </header>
-        <main>
+        <main class="Trusted-m">
             <header>
                 <h1 class=" Trusted">Our Trusted Clients and Partners</h1>
                 <p class="Trusted-p">After our services section there will be a section to showcase the logo of the
@@ -290,7 +292,7 @@
 
 
         </main>
-        <header>
+        <header class="Recent-he">
             <!-- Recent Projects -->
             <section class="display Recent-m">
                 <div class="Recent-h">
@@ -304,7 +306,7 @@
             </section>
 
         </header>
-        <section>
+        <section class="See-s" >
             <ul class="See-m">
                 <li class="display">
                     <a class="See-1" href="">See All</a>
@@ -317,7 +319,7 @@
             </ul>
         </section>
 
-        <section>
+        <section class="Travel-s">
             <header class="Travel-h display">
                 <div class="Travel-b">
                     <img class="Travel" src="./img/img14.png" alt="">
@@ -353,7 +355,7 @@
                 </div>
             </header>
         </section>
-        <main  class="Award-m">
+        <main class="Award-m">
             <header class="display Real-m">
                 <div>
                     <h1 class="Real">Real Results. Global Reach. Proven Trust</h1>
@@ -386,10 +388,12 @@
             </section>
             <img class="img-22" src="./img/img22.png" alt="">
             <div class="Award-h">
-                <h1 class="Award"> 24+  </h1>
+                <h1 class="Award"> 24+ </h1>
                 <p class="Award-1">Award Wining</p>
             </div>
         </main>
+
+       
     </main>
     <footer>
 
